--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -721,6 +721,10 @@ pt_BR:
           enable_subscriptions_tip: "Ativar funcionalidade de inscrições?"
           enable_subscriptions_false: "Desativado"
           enable_subscriptions_true: "ativado"
+          customer_names_in_reports: "Nomes dos Clientes nos Relatórios"
+          customer_names_tip: "Permitir que seus fornecedores vejam os nomes dos clientes nos relatórios"
+          customer_names_false: "Desativado"
+          customer_names_true: "Ativado"
           shopfront_message: "Mensagem da loja virtual"
           shopfront_message_placeholder: >
               Uma mensagem opcional para dar as boas-vindas aos clientes e explicar
@@ -2771,6 +2775,8 @@ pt_BR:
   adjustments: "Ajustes"
   payments: "Pagamentos"
   return_authorizations: "Autorizações de Retorno"
+  credit_owed: "Crédito Devido"
+  new_adjustment: "Novo Ajuste"
   payment: "Pagamento"
   payment_method: "Método de Pagamento"
   shipment: "Envio"
@@ -2972,6 +2978,7 @@ pt_BR:
           other: "%{count}erros não permitiram que esse registro fosse salvo:"
         there_were_problems_with_the_following_fields: "Houve problemas com os seguintes campos"
       payments_list:
+        date_time: "Data/hora"
         amount: "Montante"
         payment_method: "Método de Pagamento"
         payment_state: "Estado de pagamento"
@@ -3189,6 +3196,8 @@ pt_BR:
           stripe:
             error_saving_payment: Erro ao salvar o pagamento
             submitting_payment: Enviando pagamento ...
+          paypal:
+            no_payment_via_admin_backend: Pagamentos por Paypal não podem ser completados na Área Administrativa
       products:
         image_upload_error: "A imagem do produto não foi reconhecida. Faça o upload de uma imagem no formato PNG ou JPG."
         new:
@@ -3242,6 +3251,8 @@ pt_BR:
           bulk_coop_allocation: 'Atacado Cooperativa - Alocação'
           bulk_coop_packing_sheets: 'Atacado Cooperativa - Folhas de Empacotamento'
           bulk_coop_customer_payments: 'Atacado Cooperativa - Pagamentos de Cliente'
+        customer_names_message:
+          customer_names_tip: "Se os nomes dos clientes estiverem ocultos na lista, você pode entrar em contato com o seu distribuidor e perguntar se ele pode atualizar as preferências de modo que os fornecedores possam ver os nomes dos clientes."
       users:
         index:
           listing_users: "Listando Usuários"
@@ -3474,3 +3485,8 @@ pt_BR:
       shipment:
         cannot_ready: "Não é possível completar a entrega."
       invalid_taxonomy_id: "Id invalido de taxonomia"
+    activerecord:
+      models:
+        spree/payment:
+          one: Pagamentos
+          other: Pagamentos
